SyntacticAnalyzer/tests/fail/sentencia-for.java
class foo {
	ctor (int n1)
	var int n2;
	{
		// falta una expresion en el for
		for (j!=20%2>=6*3; j/i){
			i=i+1;
		}
	}
}
